--- a/content/resources/cms-876s06.md
+++ b/content/resources/cms-876s06.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Up close with a prototype Serge Modular Synthesizer. (Photo courtesy
   of Wayne Marshall.)
-file: /media/courses/cms-876-history-of-media-and-technology-sound-the-minority-report-radical-music-of-the-past-100-years-spring-2006/ba127a57fc9b07f6cf09400ddb33b2a1_cms-876s06.jpg
+file: /courses/cms-876-history-of-media-and-technology-sound-the-minority-report-radical-music-of-the-past-100-years-spring-2006/ba127a57fc9b07f6cf09400ddb33b2a1_cms-876s06.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Up close with a prototype [Serge Modular Synthesizer](http://www.serge-fans.com/index.htm).
@@ -10,8 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Closeup of knobs, dials and wires on an analog synthesizer.
 learning_resource_types: []
+ocw_type: ''
 resourcetype: Image
 title: Serge Modular Synthesizer
-type: OCWImage
 uid: ba127a57-fc9b-07f6-cf09-400ddb33b2a1
 ---
+Up close with a prototype Serge Modular Synthesizer. (Photo courtesy of Wayne Marshall.)
+
