Sync all content

--- a/content/resources/cms-876s06.md
+++ b/content/resources/cms-876s06.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Closeup of knobs, dials and wires on an analog synthesizer.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: ''
 resourcetype: Image
 title: Serge Modular Synthesizer
 uid: ba127a57-fc9b-07f6-cf09-400ddb33b2a1
 ---
 Up close with a prototype Serge Modular Synthesizer. (Photo courtesy of Wayne Marshall.)
-
